src/app/components/core/homepage/homepage.component.scss
@import 'animations/bounce.css';
@import 'animations/fade.css';
@import 'animations/move.css';
@font-face {
    font-family: epyval;
    src: url('/assets/fonts/Epyval.ttf');
}

.homepage-container {
    width: 100vw;
    height: 100vh;
    padding: 0;
    margin: 0;
    background: radial-gradient(farthest-corner at 0 0, #0d0d0d, #220022 75%, #FF00FF);
    overflow: hidden;
}

.title-name {
    position: absolute;
    display: flex;
    top: 50%;
    left: 50%;
    height: calc(5px + (200 - 10) * ((100vw - 50px) / (2000 - 50)));
    font-size: calc(5px + (200 - 10) * ((100vw - 50px) / (2000 - 50)));
    line-height: calc(5px + (200 - 10) * ((100vw - 50px) / (2000 - 50)));
    transform: translate(-50%, -50%);
    font-family: epyval;
    color: #FF00FF;
    animation: moveTitle 1.25s 2.75s ease-in-out forwards;
    z-index: 1;
}

.title-name>div {
    opacity: 0;
    background-color: #f3ec78;
    background-image: linear-gradient(135deg, #E0FFFF 20%, #FF00FF);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.description {
    margin-top: 60vh;
    margin-left: 135%;
    margin-right: 109%;
    filter: blur(1rem);
    animation: moveDescription 2.5s 3s ease-in-out forwards;
    font-weight: 500;
}

.full-stack {
    text-align: center;
    font-size: calc(5px + (110 - 5) * ((100vw - 50px) / (2000 - 50)));
    font-family: epyval;
    white-space: nowrap;
    background-color: white;
    color: #0d0d0d;
    transform: skew(-35deg);
    padding: 1%;
}

.programming-languages {
    display: flex;
    justify-content: right;
    font-size: calc(5px + (100 - 5) * ((100vw - 50px) / (2000 - 50)));
    font-family: epyval;
    margin-top: 2.5%;
}

.programming-languages>div {
    text-align: center;
    background-color: white;
    color: #0d0d0d;
    padding: 1%;
    transform: skew(-35deg);
    padding-left: 2%;
    padding-right: 2%;
}

.java {
    transform: skew(-35deg);
    margin-right: 10%;
}

.angular {
    margin-right: 5%;
}

.scroll-info {
    position: absolute;
    display: flex;
    bottom: 0;
    margin: 1rem;
    font-size: calc(10px + (40 - 10) * ((100vw - 50px) / (2000 - 50)));
    font-family: epyval;
    color: rgba(100, 100, 100, 0.75);
    opacity: 0;
    transform: translateY(1rem);
    animation: fadeScrollInfo 3s ease 7.5s forwards;
}

.remove-scroll-info {
    position: absolute;
    display: flex;
    bottom: 0;
    margin: 1rem;
    font-size: calc(10px + (40 - 10) * ((100vw - 50px) / (2000 - 50)));
    font-family: epyval;
    color: rgba(100, 100, 100, 0.75);
    opacity: 1;
    animation: removeScrollInfo 1s ease-in-out forwards;
}

.handset-portrait,
.handset-landscape {
    .programming-languages>div,
    .full-stack {
        box-shadow: 4.5px 3px 1.5px 0.75px rgba(100, 100, 100, 0.75);
    }
}

.small {
    .programming-languages>div,
    .full-stack {
        box-shadow: 9px 6px 3px 1.5px rgba(100, 100, 100, 0.75);
    }
}

.medium {
    .programming-languages>div,
    .full-stack {
        box-shadow: 12px 8px 4px 2px rgba(100, 100, 100, 0.75);
    }
}

.large {
    .programming-languages>div,
    .full-stack {
        box-shadow: 15px 10px 5px 2.5px rgba(100, 100, 100, 0.75);
    }
}

.web-landscape {
    .programming-languages>div,
    .full-stack {
        box-shadow: 18px 12px 6px 3px rgba(100, 100, 100, 0.75);
    }
}

